# Stack_and_queue_on_list_repository

./: .travis.yml  CMakeLists.txt  README.md
List/: CMakeLists.txt  List.cpp  List.h  ListElem.h  ListIterator.h
QueueList/: CMakeLists.txt  QueueList.cpp  QueueList.h
StackList/: CMakeLists.txt  StackList.cpp  StackList.h
main/: CMakeLists.txt  ListTestMain.cpp
test/: CMakeLists.txt  test_queuelist.cpp  test_stacklist.cpp
